# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,8 @@ import memberRouter from "./member";
 import accountsRouter from "./accounts";
 import transactionsRouter from "./transactions";
 import transfersRouter from "./transfers";
+import externalPayeesRouter from "./external-payees";
+import externalTransfersRouter from "./external-transfers";
 import billsRouter from "./bills";
 import loansRouter from "./loans";
 import cardsRouter from "./cards";
@@ -22,6 +24,8 @@ router.use(memberRouter);
 router.use(accountsRouter);
 router.use(transactionsRouter);
 router.use(transfersRouter);
+router.use(externalPayeesRouter);
+router.use(externalTransfersRouter);
 router.use(billsRouter);
 router.use(loansRouter);
 router.use(cardsRouter);
